--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -3,21 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#02091F"
+    android:background="#5D6266"
+    android:id="@+id/main"
+    tools:context=".MainActivity"
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/bg1"
+        android:src="@drawable/bg2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/logo"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="56dp"
@@ -27,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/develop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -37,8 +39,8 @@
         android:textColor="@color/white"
         android:textSize="29sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/logo"
+        app:layout_constraintTop_toBottomOf="@+id/bg" />
 
     <ImageView
         android:id="@+id/camera"
@@ -48,8 +50,8 @@
         app:layout_constraintEnd_toStartOf="@+id/star"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/develop"
+        app:layout_constraintTop_toBottomOf="@+id/bg"
         android:src="@drawable/camera" />
 
     <ImageView
@@ -84,7 +86,7 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/img4"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
@@ -92,11 +94,11 @@
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toStartOf="@+id/guideline_center"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:src="@drawable/image4" />
+        app:layout_constraintTop_toBottomOf="@+id/develop"
+        android:src="@drawable/img4" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/img3"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
@@ -106,23 +108,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toStartOf="@+id/guideline_center"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        android:src="@drawable/image3" />
+        app:layout_constraintStart_toStartOf="@+id/img4"
+        app:layout_constraintTop_toBottomOf="@+id/img4"
+        android:src="@drawable/img3" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/img2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintStart_toStartOf="@+id/guideline_center"
-        app:layout_constraintTop_toTopOf="@+id/imageView8"
-        android:src="@drawable/image2" />
+        app:layout_constraintTop_toTopOf="@+id/img4"
+        android:src="@drawable/img2" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/img"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -131,10 +133,10 @@
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="16:9"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/img2"
         app:layout_constraintStart_toStartOf="@+id/guideline_center"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        android:src="@drawable/image" />
+        app:layout_constraintTop_toBottomOf="@+id/img2"
+        android:src="@drawable/img" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
